[package]
name = "battle-city"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.1", features = ["mp3"] }
bevy_ecs_tilemap = "0.18"
bevy_ggrs = "0.21"
matchbox_socket = "0.14"
bevy_egui = "0.39.1"
bevy_asset_loader = "0.26"
bevy_common_assets = { version = "0.16", features = ["ron"] }
leafwing-input-manager = "0.20"
serde = { version = "1", features = ["derive"] }
rand = "0.9"
bytemuck = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.9"

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
